templates/dremio-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    certmanager.k8s.io/issuer: vault-daas
  name: infra-daas-client-s7-aero
  namespace: daas-prod
  labels:
    app: dremio-client
spec:
  tls:
    - hosts:
        - dremio.common12p24.epaas.s7.aero
      secretName: dremio.common12p24.epaas.s7.aero
  rules:
    - host: dremio.common12p24.epaas.s7.aero
      http:
        paths:
          - path: /
            backend:
              serviceName: dremio-client
              servicePort: 9047
